[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/trap/trap_template.gd" type="Script" id=1]

[node name="TrapTemplate" type="Area2D"]
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="Animation" type="AnimationPlayer" parent="."]

[node name="Position" type="Position2D" parent="."]

[connection signal="body_entered" from="." to="." method="on_body_entered"]
[connection signal="body_exited" from="." to="." method="on_body_exited"]
